k8s/istio/destination-rule-svc1.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: svc1
spec:
  host: svc1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: baseline
      labels:
        env: baseline
