k8s/istio/destination-rule-svc13.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: svc13
spec:
  host: svc13
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: baseline
      labels:
        env: baseline
