k8s/istio/destination-rule-svc15.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: svc15
spec:
  host: svc15
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: baseline
      labels:
        env: baseline
