k8s/istio/destination-rule-svc9.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: svc9
spec:
  host: svc9
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: baseline
      labels:
        env: baseline
