k8s/istio/virtualservice-svc12.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: svc12
spec:
  hosts:
    - svc12
  http:
    - route:
        - destination:
            host: svc12
            subset: baseline
