k8s/istio/virtualservice-svc13.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: svc13
spec:
  hosts:
    - svc13
  http:
    - route:
        - destination:
            host: svc13
            subset: baseline
