k8s/istio/virtualservice-svc4.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: svc4
spec:
  hosts:
    - svc4
  http:
    - route:
        - destination:
            host: svc4
            subset: baseline
