k8s/istio/virtualservice-svc8.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: svc8
spec:
  hosts:
    - svc8
  http:
    - route:
        - destination:
            host: svc8
            subset: baseline
